--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,8 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          node-version: 20
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -26,7 +24,10 @@ jobs:
           cache: gradle
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Run ktlint
         run: ./gradlew ktlintCheck
@@ -40,8 +41,8 @@ jobs:
         with:
           name: lint-reports
           path: |
-            **/build/reports/ktlint/
-            **/build/reports/lint-results-debug.html
+            app/build/reports/ktlint/
+            app/build/reports/lint-results-debug.html
 
   build:
     needs: code-quality
@@ -49,8 +50,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        node-version: 20
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -60,7 +59,7 @@ jobs:
         cache: gradle
 
     - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+      uses: gradle/gradle-build-action@v3
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
